@@ -1,3 +1,9 @@
+2006-12-09  Ulrich Drepper  <drepper@redhat.com>
+
+	* elflint.c (compare_hash_gnu_hash): New function.  Report if the
+	two hash tables have different content (module expected omission
+	of undefined symbols).
+
 2006-08-29  Roland McGrath  <roland@redhat.com>
 
 	* Makefile.am (MAINTAINERCLEANFILES): New variable.
